--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -17,24 +17,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "responsible-network",
+   "id": "055462da-8dd8-4e26-a4a5-773fd613b6d9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uncomment to load the local package rather than the pip-installed version.\n",
     "# Add project src to path.\n",
-    "import set_path\n",
-    "\n",
+    "import set_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6514388-d99e-4c90-a8fb-e3256bb2c8a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Import modules.\n",
     "import logging\n",
     "\n",
-    "import src.fusion as fusion\n",
-    "import src.region_growing as growing\n",
-    "import src.utils.ahn_utils as ahn_utils\n",
-    "import src.utils.bgt_utils as bgt_utils\n",
-    "import src.utils.plot_utils as plot_utils\n",
-    "import src.utils.log_utils as log_utils\n",
-    "from src.pipeline import Pipeline\n",
-    "from src.labels import Labels"
+    "import upcp.fusion as fusion\n",
+    "import upcp.region_growing as growing\n",
+    "import upcp.utils.ahn_utils as ahn_utils\n",
+    "import upcp.utils.bgt_utils as bgt_utils\n",
+    "import upcp.utils.plot_utils as plot_utils\n",
+    "import upcp.utils.log_utils as log_utils\n",
+    "from upcp.pipeline import Pipeline\n",
+    "from upcp.labels import Labels"
    ]
   },
   {
@@ -45,12 +54,12 @@
    "outputs": [],
    "source": [
     "# Set-up logging.\n",
-    "logfile = 'pipeline.log'\n",
+    "logfile = 'upcp.pipeline.log'\n",
     "log_utils.reset_logger()\n",
     "\n",
     "# INFO messages will be printed to console.\n",
     "log_utils.add_console_logger()\n",
-    "# All messages will be printed to a file. Use `clear_log` flag to clear the log file, if desired.\n",
+    "# DEBUG messages will be printed to a file. Use `clear_log` flag to clear the log file, if desired.\n",
     "log_utils.add_file_logger(logfile, clear_log=True)"
    ]
   },
@@ -389,13 +398,8 @@
     "# The prefix will be replaced for processed files (otherwise the input might be overwritten).\n",
     "out_prefix = 'processed_'\n",
     "\n",
-    "# Re-set logging to suppress console output.\n",
-    "log_utils.reset_logger()\n",
-    "\n",
-    "# Only ERROR messages will be printed to console.\n",
-    "log_utils.add_console_logger(level=logging.ERROR)\n",
-    "# All messages will be printed to a file. Use `clear_log` flag to clear the log file, if desired.\n",
-    "log_utils.add_file_logger(logfile, clear_log=True)"
+    "# Suppress logging other than ERROR messages to console.\n",
+    "log_utils.set_console_level(level=logging.ERROR)"
    ]
   },
   {
@@ -480,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
