--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -82,6 +82,10 @@
     "bgt_pole_file = '../datasets/bgt/custom_poles_demo.csv'\n",
     "# File with <x,y> coordinates of street furniture objects.\n",
     "bgt_street_furniture_file = '../datasets/bgt/bgt_street_furniture_demo.csv'\n",
+    "# File with BGT tram track lines.\n",
+    "bgt_tramtrack_file = '../datasets/bgt/bgt_tramtracks_demo.csv'\n",
+    "# File with BAG building polygons\n",
+    "bag_building_file = '../datasets/bag/bag_buildings_demo.csv'\n",
     "\n",
     "# Initialize AHN reader for elevation data.\n",
     "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
@@ -90,7 +94,11 @@
     "bgt_building_reader = bgt_utils.BGTPolyReader(bgt_file=bgt_building_file)\n",
     "bgt_road_reader = bgt_utils.BGTPolyReader(bgt_file=bgt_road_file)\n",
     "bgt_pole_reader = bgt_utils.BGTPointReader(bgt_file=bgt_pole_file)\n",
-    "bgt_street_furniture_reader = bgt_utils.BGTPointReader(bgt_file=bgt_street_furniture_file)"
+    "bgt_street_furniture_reader = bgt_utils.BGTPointReader(bgt_file=bgt_street_furniture_file)\n",
+    "bgt_tramtrack_reader = bgt_utils.BGTLineReader(bgt_file=bgt_tramtrack_file)\n",
+    "\n",
+    "# Initialize BAG reader for building outlines.\n",
+    "bag_buidling_reader = bgt_utils.BGTPolyReader(bgt_file=bag_building_file)\n"
    ]
   },
   {
@@ -163,6 +171,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3fefc49d",
+   "metadata": {},
+   "source": [
+    "### Suspended cables and streetlights\n",
+    "Next we label suspended utility/tram cables and streetlights.\n",
+    "For details and on how to generate the BGT tramtrack csv file, see notebook [3. Cables](3.%20Cables.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94a304aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Road fuser using BGT road polygon data.\n",
+    "cable_fuser = fusion.CableFuser(Labels.CABLE, Labels.CABLE, Labels.TRAM_CABLE, Labels.ARMATUUR, ahn_reader, bag_reader=bag_buidling_reader, bgt_tram_reader=bgt_tramtrack_reader)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "secret-packaging",
    "metadata": {},
    "source": [
@@ -170,7 +199,7 @@
     "\n",
     "Then we label cars by searching for 'car-like' clusters above road segments.\n",
     "\n",
-    "For details and on how to generate the BGT road csv file, see notebook [3. Cars](3.%20Cars.ipynb)."
+    "For details and on how to generate the BGT road csv file, see notebook [4. Cars](4.%20Cars.ipynb)."
    ]
   },
   {
@@ -197,7 +226,7 @@
     "\n",
     "Next, we look for 'pole-like' objects such as trees, street lights and traffic signs.\n",
     "\n",
-    "For details and more options, see notebook [4. Pole-like objects](4.%20Pole-like%20objects.ipynb)."
+    "For details and more options, see notebook [5. Pole-like objects](5.%20Pole-like%20objects.ipynb)."
    ]
   },
   {
@@ -227,7 +256,7 @@
     "\n",
     "Finally we label street furniture objects by matching clusters above the ground with reference BGT points.\n",
     "\n",
-    "For details and more options, see notebook [5. Street furniture](5.%20Street%20furniture.ipynb)."
+    "For details and more options, see notebook [6. Street furniture](6.%20Street%20furniture.ipynb)."
    ]
   },
   {
@@ -287,7 +316,7 @@
     "\n",
     "We also use region growing to refine the pole-like objects. We do this separately for the top and bottom since the best settings for each might differ.\n",
     "\n",
-    "For details and more options, see notebook [4. Pole-like objects](4.%20Pole-like%20objects.ipynb)."
+    "For details and more options, see notebook [5. Pole-like objects](5.%20Pole-like%20objects.ipynb)."
    ]
   },
   {
@@ -332,9 +361,9 @@
    "outputs": [],
    "source": [
     "# Set-up pipeline.\n",
-    "process_sequence = (npz_ground_fuser, road_part_fuser, noise_filter, bgt_building_fuser, car_fuser,\n",
-    "                    tree_fuser, light_fuser, sign_fuser, rubbish_bin_fuser, city_bench_fuser, \n",
-    "                    building_grower, light_grower, sign_grower, tree_grower)\n",
+    "process_sequence = (npz_ground_fuser, road_part_fuser, noise_filter, bgt_building_fuser, cable_fuser,\n",
+    "                    car_fuser, tree_fuser, light_fuser, sign_fuser, rubbish_bin_fuser, \n",
+    "                    city_bench_fuser, building_grower, light_grower, sign_grower, tree_grower)\n",
     "pipeline = Pipeline(processors=process_sequence, ahn_reader=ahn_reader, caching=True)"
    ]
   },
@@ -470,9 +499,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "upcp_env",
    "language": "python",
-   "name": "python3"
+   "name": "upcp_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -484,7 +513,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
