--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -51,7 +51,7 @@
     "# Set-up.\n",
     "\n",
     "# The point cloud tile for which a corresponding AHN tile should be created.\n",
-    "tile_code = '2386_9702'\n",
+    "tile_code = '2397_9705'\n",
     "filename = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
     "\n",
     "# The folder where AHN data will be saved.\n",
@@ -230,7 +230,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e6888fd1df2ad0cf70295ff83cef12f2beafc15e4cff2fac0fbf5a36213f1b1c"
+   }
   }
  },
  "nbformat": 4,
