--- a/notebooks/4. Cars.ipynb
+++ b/notebooks/4. Cars.ipynb
@@ -159,9 +159,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "upcp_env",
    "language": "python",
-   "name": "python3"
+   "name": "upcp_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +173,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
