Fix typo in notebook 0.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -98,7 +98,7 @@
     "bgt_tramtrack_reader = bgt_utils.BGTLineReader(bgt_file=bgt_tramtrack_file)\n",
     "\n",
     "# Initialize BAG reader for building outlines.\n",
-    "bag_buidling_reader = bgt_utils.BGTPolyReader(bgt_file=bag_building_file)\n"
+    "bag_building_reader = bgt_utils.BGTPolyReader(bgt_file=bag_building_file)"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "outputs": [],
    "source": [
     "# Road fuser using BGT road polygon data.\n",
-    "cable_fuser = fusion.CableFuser(Labels.CABLE, Labels.CABLE, Labels.TRAM_CABLE, Labels.ARMATUUR, ahn_reader, bag_reader=bag_buidling_reader, bgt_tram_reader=bgt_tramtrack_reader)"
+    "cable_fuser = fusion.CableFuser(Labels.CABLE, Labels.CABLE, Labels.TRAM_CABLE, Labels.ARMATUUR, ahn_reader, bag_reader=bag_building_reader, bgt_tram_reader=bgt_tramtrack_reader)"
    ]
   },
   {
@@ -499,9 +499,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "upcp_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "upcp_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -513,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
