Small fixes and clean-up

--- a/notebooks/3. Cables.ipynb
+++ b/notebooks/3. Cables.ipynb
@@ -89,24 +89,29 @@
     "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
     "\n",
     "# Create reader for BAG outlines.\n",
-    "bag_buidling_reader = bgt_utils.BGTPolyReader(bgt_file=bag_building_file)\n",
+    "bag_building_reader = bgt_utils.BGTPolyReader(bgt_file=bag_building_file)\n",
     "\n",
     "# Create reader for BGT road part polygons.\n",
     "bgt_tramtrack_reader = bgt_utils.BGTLineReader(bgt_file=bgt_tramtrack_file)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d65a242a-eb1d-4554-87aa-c839a5756cbc",
+   "metadata": {},
+   "source": [
+    "For Cable fuser parameters, see [cable_fuser.py](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/blob/main/src/upcp/fusion/cable_fuser.py)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cfde1e2-7cd4-4be6-8299-b9fdeeb25b35",
+   "id": "89f27453-61a9-4295-87c3-15ca5b665604",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cable fuser parameters\n",
-    "cable_params = {}\n",
-    "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "cable_fuser = fusion.CableFuser(Labels.CABLE, Labels.CABLE, Labels.TRAM_CABLE, Labels.ARMATUUR, ahn_reader, bag_reader=bag_buidling_reader, bgt_tram_reader=bgt_tramtrack_reader, **cable_params)"
+    "cable_fuser = fusion.CableFuser(Labels.CABLE, Labels.CABLE, Labels.TRAM_CABLE, Labels.ARMATUUR, ahn_reader, bag_reader=bag_building_reader, bgt_tram_reader=bgt_tramtrack_reader)"
    ]
   },
   {
@@ -152,9 +157,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "upcp_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "upcp_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -166,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
