--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -5,7 +5,7 @@
    "id": "c3fd9730-0dc5-4520-a485-b2445c984820",
    "metadata": {},
    "source": [
-    "python3 -m build# Pre-processing of LAS tiles\n",
+    "# Pre-processing of LAS tiles\n",
     "\n",
     "Pre-processing consists of two parts:\n",
     "1. Clipping of AHN point clouds to match target point clouds;\n",
@@ -230,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
