--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -376,9 +376,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "upcp_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "upcp_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -390,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
