--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -32,6 +32,7 @@
    "outputs": [],
    "source": [
     "import upcp.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
+    "import upcp.scrapers.ams_bag_scraper as ams_bag_scraper\n",
     "import upcp.scrapers.ndw_scraper as ndw_scraper\n",
     "import upcp.utils.las_utils as las_utils\n",
     "import upcp.utils.csv_utils as csv_utils"
@@ -250,6 +251,94 @@
     "# Write the csv (uncomment when data is available)\n",
     "#csv_utils.write_csv(bgt_data_file, bgt_point_objects_csv, csv_headers)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e834adc",
+   "metadata": {},
+   "source": [
+    "## Scrape tram track information from BGT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c51867a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Output file for the BGT fuser.\n",
+    "bgt_data_file = '../datasets/bgt/bgt_tramtracks_demo.csv'\n",
+    "csv_headers = ['bgt_type', 'linestring', 'x_min', 'y_max', 'x_max', 'y_min']\n",
+    "\n",
+    "# BGT layers\n",
+    "bgt_layer = 'BGT_SPR_tram'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c546eec4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scrape data from the Amsterdam WFS, this will return a json response.\n",
+    "json_response = ams_bgt_scraper.scrape_amsterdam_bgt(bgt_layer, bbox=bbox)\n",
+    "\n",
+    "# Parse the downloaded json response.\n",
+    "parsed_content = ams_bgt_scraper.parse_linestrings(json_response, include_bbox=True)\n",
+    "\n",
+    "# Write the csv\n",
+    "csv_utils.write_csv(bgt_data_file, parsed_content, csv_headers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ac5c0c8",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Scrape building footprintdata from BAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e293282e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Output file for the BGT fuser.\n",
+    "bag_data_file = '../datasets/bag/bag_buildings_demo.csv'\n",
+    "csv_headers = ['bgt_type', 'polygon', 'x_min', 'y_max', 'x_max', 'y_min']\n",
+    "\n",
+    "bag_layer = 'BAG3D_v2:lod12'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "969f818b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scrape data from the WFS, this will return a json response.\n",
+    "json_response = ams_bag_scraper.scrape_amsterdam_bag(bag_layer, bbox=bbox)\n",
+    "\n",
+    "# Parse the downloaded json response.\n",
+    "parsed_content, _ = ams_bag_scraper.parse_polygons(json_response)\n",
+    "\n",
+    "# Write the csv\n",
+    "csv_utils.write_csv(bag_data_file, parsed_content, csv_headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "731b3a26-d6f4-40f1-a29f-e2328fb396e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -268,7 +357,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e6888fd1df2ad0cf70295ff83cef12f2beafc15e4cff2fac0fbf5a36213f1b1c"
+   }
   }
  },
  "nbformat": 4,
