--- a/notebooks/3. Cables.ipynb
+++ b/notebooks/3. Cables.ipynb
@@ -5,9 +5,9 @@
    "id": "d70114bf-67b2-4a07-80c9-a518609ed99c",
    "metadata": {},
    "source": [
-    "# Labelling of cars\n",
+    "# Labelling of cables and suspended streetlights\n",
     "\n",
-    "We label cars by locating 'car-shaped' clusters above roads and parking bays."
+    "We label cables by locating 'linear point' clusters above ground."
    ]
   },
   {
@@ -31,12 +31,9 @@
    "source": [
     "# Import modules.\n",
     "import numpy as np\n",
-    "import time\n",
     "import logging\n",
     "\n",
     "import upcp.utils.log_utils as log_utils\n",
-    "import upcp.utils.las_utils as las_utils\n",
-    "import upcp.utils.csv_utils as csv_utils\n",
     "import upcp.utils.ahn_utils as ahn_utils\n",
     "import upcp.utils.bgt_utils as bgt_utils\n",
     "import upcp.fusion as fusion\n",
@@ -53,8 +50,8 @@
    "id": "bdbe7291",
    "metadata": {},
    "source": [
-    "## Car fuser based on cluster dimensions and BGT information\n",
-    "First, download and parse the required BGT data in notebook [1. Generate reference data](1.%20Generate%20reference%20data.ipynb)."
+    "## Cable fuser based on point neighbourhood.\n",
+    "First, download and parse the required BGT and BAG data in notebook [1. Generate reference data](1.%20Generate%20reference%20data.ipynb)."
    ]
   },
   {
@@ -77,6 +74,7 @@
    "source": [
     "# Select the file to process.\n",
     "tilecode = '2386_9702'\n",
+    "# tilecode = '2397_9705'\n",
     "\n",
     "in_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
@@ -84,28 +82,36 @@
     "# Data folder for the fusers.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
     "pc_data_folder = '../datasets/pointcloud/'\n",
-    "bgt_data_file = '../datasets/bgt/bgt_roads_demo.csv'\n",
+    "bag_building_file = '../datasets/bag/bag_buildings_demo.csv'\n",
+    "bgt_tramtrack_file = '../datasets/bgt/bgt_tramtracks_demo.csv'\n",
     "\n",
     "# We need elevation data to determine object height above ground.\n",
     "ahn_reader = ahn_utils.NPZReader(ahn_data_folder)\n",
     "\n",
+    "# Create reader for BAG outlines.\n",
+    "bag_building_reader = bgt_utils.BGTPolyReader(bgt_file=bag_building_file)\n",
+    "\n",
     "# Create reader for BGT road part polygons.\n",
-    "bgt_road_reader = bgt_utils.BGTPolyReader(bgt_file=bgt_data_file)"
+    "bgt_tramtrack_reader = bgt_utils.BGTLineReader(bgt_file=bgt_tramtrack_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d65a242a-eb1d-4554-87aa-c839a5756cbc",
+   "metadata": {},
+   "source": [
+    "For Cable fuser parameters, see [cable_fuser.py](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/blob/main/src/upcp/fusion/cable_fuser.py)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cfde1e2-7cd4-4be6-8299-b9fdeeb25b35",
+   "id": "89f27453-61a9-4295-87c3-15ca5b665604",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To find appropriate dimension ranges, see e.g. https://nl.automobiledimension.com/.\n",
-    "car_params = {'min_height': 1.2, 'max_height': 2.4, 'min_width': 1.4, 'max_width': 2.4, 'min_length': 3.0, 'max_length': 6.0}\n",
-    "\n",
     "# Car fuser using a clustering algorithm and BGT road data.\n",
-    "car_fuser = fusion.CarFuser(Labels.CAR, ahn_reader, bgt_reader=bgt_road_reader, grid_size=0.05,\n",
-    "                            min_component_size=5000, params=car_params)"
+    "cable_fuser = fusion.CableFuser(Labels.CABLE, Labels.CABLE, Labels.TRAM_CABLE, Labels.ARMATUUR, ahn_reader, bag_reader=bag_building_reader, bgt_tram_reader=bgt_tramtrack_reader)"
    ]
   },
   {
@@ -125,7 +131,7 @@
    "outputs": [],
    "source": [
     "# Set-up the order in how we want to label.\n",
-    "process_sequence = (car_fuser,)\n",
+    "process_sequence = (cable_fuser,)\n",
     "pipeline = Pipeline(processors=process_sequence, exclude_labels=exclude_labels, caching=False)"
    ]
   },
@@ -147,14 +153,6 @@
     "# Process the file.\n",
     "pipeline.process_file(in_file, out_file=out_file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f41fb3fe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -173,7 +171,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
