--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -5,7 +5,7 @@
    "id": "c3fd9730-0dc5-4520-a485-b2445c984820",
    "metadata": {},
    "source": [
-    "python3 -m build# Pre-processing of LAS tiles\n",
+    "# Pre-processing of LAS tiles\n",
     "\n",
     "Pre-processing consists of two parts:\n",
     "1. Clipping of AHN point clouds to match target point clouds;\n",
@@ -51,7 +51,7 @@
     "# Set-up.\n",
     "\n",
     "# The point cloud tile for which a corresponding AHN tile should be created.\n",
-    "tile_code = '2386_9702'\n",
+    "tile_code = '2397_9705'\n",
     "filename = '../datasets/pointcloud/filtered_' + tile_code + '.laz'\n",
     "\n",
     "# The folder where AHN data will be saved.\n",
@@ -230,7 +230,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e6888fd1df2ad0cf70295ff83cef12f2beafc15e4cff2fac0fbf5a36213f1b1c"
+   }
   }
  },
  "nbformat": 4,
