--- a/notebooks/2. Ground and Buildings.ipynb
+++ b/notebooks/2. Ground and Buildings.ipynb
@@ -328,6 +328,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec28b1d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NEW PIPELINE OPTION: Set-up AHN + BGT pipeline.\n",
+    "process_sequence = (npz_ground_fuser, road_part_fuser, bgt_building_fuser)\n",
+    "pipeline = Pipeline(processors=process_sequence, caching=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "69b5febb",
    "metadata": {},
@@ -344,6 +356,7 @@
    "source": [
     "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
     "tilecode = '2386_9702'\n",
+    "# tilecode = '2397_9705'\n",
     "\n",
     "in_file = '../datasets/pointcloud/filtered_' + tilecode + '.laz'\n",
     "out_file = '../datasets/pointcloud/labelled_' + tilecode + '.laz'\n",
@@ -377,7 +390,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e6888fd1df2ad0cf70295ff83cef12f2beafc15e4cff2fac0fbf5a36213f1b1c"
+   }
   }
  },
  "nbformat": 4,
