--- a/notebooks/1. Generate reference data.ipynb
+++ b/notebooks/1. Generate reference data.ipynb
@@ -32,7 +32,6 @@
    "outputs": [],
    "source": [
     "import upcp.scrapers.ams_bgt_scraper as ams_bgt_scraper\n",
-    "import upcp.scrapers.ams_bag_scraper as ams_bag_scraper\n",
     "import upcp.scrapers.ndw_scraper as ndw_scraper\n",
     "import upcp.utils.las_utils as las_utils\n",
     "import upcp.utils.csv_utils as csv_utils"
@@ -312,7 +311,7 @@
     "bag_data_file = '../datasets/bag/bag_buildings_demo.csv'\n",
     "csv_headers = ['bgt_type', 'polygon', 'x_min', 'y_max', 'x_max', 'y_min']\n",
     "\n",
-    "bag_layer = 'BAG3D_v2:lod12'"
+    "bag_layer = 'PAND'"
    ]
   },
   {
@@ -323,10 +322,10 @@
    "outputs": [],
    "source": [
     "# Scrape data from the WFS, this will return a json response.\n",
-    "json_response = ams_bag_scraper.scrape_amsterdam_bag(bag_layer, bbox=bbox)\n",
+    "json_response = ams_bgt_scraper.scrape_amsterdam_bgt('PAND', bbox=bbox, use_bag=True)\n",
     "\n",
     "# Parse the downloaded json response.\n",
-    "parsed_content, _ = ams_bag_scraper.parse_polygons(json_response)\n",
+    "parsed_content = ams_bgt_scraper.parse_polygons(json_response)\n",
     "\n",
     "# Write the csv\n",
     "csv_utils.write_csv(bag_data_file, parsed_content, csv_headers)"
@@ -357,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
